force-app/main/default/objects/Shipment__c/fields/Breeder__c.field-meta.xml
<CustomField>
    <fullName>Breeder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breeder</label>
    <referenceTo>Breeder__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>