force-app/main/default/objects/Shipment__c/fields/Dead_on_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Dead_on_Arrival__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dead on Arrival</label>
    <type>Checkbox</type>
</CustomField>