force-app/main/default/objects/Shipment__c/fields/Expected_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Date__c</fullName>
    <description>The date the shipment is expected to arrive.</description>
    <label>Expected Arrival Date</label>
    <type>Date</type>
</CustomField>