force-app/main/default/objects/Shipment__c/fields/How_Many_Dead__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Dead__c</fullName>
    <label>How Many Dead</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>