force-app/main/default/objects/Shipment__c/fields/Issues_with_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issues with Shipment</label>
    <type>Checkbox</type>
</CustomField>