force-app/main/default/objects/Shipment__c/fields/Number_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Animals__c</fullName>
    <label>Number of Animals Received</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>