force-app/main/default/objects/Shipment__c/fields/Number_of_Animals_Sold__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Animals_Sold__c</fullName>
    <description>Number of animals from this shipment that have been sold.</description>
    <label>Number of Animals Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>