force-app/main/default/objects/Shipment__c/validationRules/Sold_More_Than_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Sold_More_Than_Received</fullName>
    <active>true</active>
    <description>Should never sell more animals than received.</description>
    <errorConditionFormula>Number_of_Animals__c  &lt; ( How_Many_Dead__c + Number_of_Animals_Sold__c )</errorConditionFormula>
    <errorMessage>Number of animals sold and deceased cannot exceed animals received.</errorMessage>
</ValidationRule>