force-app/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Received__c</columns>
    <columns>Dead_on_Arrival__c</columns>
    <columns>Expected_Arrival_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>